2012-04-29  Sudarsana Nagineni  <sudarsana.nagineni@linux.intel.com>

        [GTK] DRT needs an implementation of layoutTestController.setDomainRelaxationForbiddenForURLScheme
        https://bugs.webkit.org/show_bug.cgi?id=85131

        Reviewed by Martin Robinson.

        Add missing implementation setDomainRelaxationForbiddenForURLScheme to
        GTK's LayoutTestController.

        * DumpRenderTree/gtk/LayoutTestControllerGtk.cpp:
        (LayoutTestController::setDomainRelaxationForbiddenForURLScheme):

2012-04-28  Sam Weinig  <sam@webkit.org>

        Smooth scrolling needs a new key
        <rdar://problem/11331632>

        Reviewed by Dan Bernstein.

        * DumpRenderTree/mac/DumpRenderTree.mm:
        (resetDefaultsToConsistentValues):
        * TestWebKitAPI/mac/InjectedBundleControllerMac.mm:
        (TestWebKitAPI::InjectedBundleController::platformInitialize):
        * WebKitTestRunner/InjectedBundle/mac/InjectedBundleMac.mm:
        (WTR::InjectedBundle::platformInitialize):
        Update for new key.

2012-04-28  Zan Dobersek  <zandobersek@gmail.com>

        [WK2] http/tests/navigation/anchor-frames-gbk.html fails
        https://bugs.webkit.org/show_bug.cgi?id=76896

        Reviewed by Darin Adler.

        Only dump as text if currently dumping render tree. This ensures that
        calling dumpAsText in a test with dumpChildFramesAsText already being
        called doesn't override the first decision, possibly making tests fail.

        * WebKitTestRunner/InjectedBundle/LayoutTestController.cpp:
        (WTR::LayoutTestController::dumpAsText):

2012-04-28  Dan Winship  <danw@gnome.org>

        Unreviewed; Add me to the SoupNetwork watchlist

        * Scripts/webkitpy/common/config/watchlist:

2012-04-27  Gustavo Noronha Silva  <gns@gnome.org>

        [GTK] jhbuild cloning is not following WEBKITOUTPUTDIR.
        https://bugs.webkit.org/show_bug.cgi?id=76161

        Reviewed by Martin Robinson.

        * Scripts/webkitdirs.pm: