@@ -846,8 +846,9 @@ class Manager(object):
         """
         # This must be started before we check the system dependencies,
         # since the helper may do things to make the setup correct.
-        self._printer.print_update("Starting helper ...")
-        self._port.start_helper()
+        if self._options.pixel_tests:
+            self._printer.print_update("Starting pixel test helper ...")
+            self._port.start_helper()
 
         # Check that the system dependencies (themes, fonts, ...) are correct.
         if not self._options.nocheck_sys_deps:
