@@ -1,3 +1,13 @@
+2012-04-29  Maciej Stachowiak  <mjs@apple.com>
+
+        REGRESSION: On Lion, run-webkit-tests changes the display color profile even when not running pixel tests
+        https://bugs.webkit.org/show_bug.cgi?id=81729
+
+        Reviewed by Dan Bernstein.
+
+        * Scripts/webkitpy/layout_tests/controllers/manager.py:
+        (Manager._set_up_run): Only launch LayoutTestHelper when running pixel tests.
+
 2012-04-29  Sudarsana Nagineni  <sudarsana.nagineni@linux.intel.com>
 
         [GTK] DRT needs an implementation of layoutTestController.setDomainRelaxationForbiddenForURLScheme
